--- a/avg-compliance.html
+++ b/avg-compliance.html
@@ -144,28 +144,7 @@
     </script>
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/utilities.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/navigation.css">
-    <link rel="stylesheet" href="css/buttons.css">
-    <link rel="stylesheet" href="css/hero.css">
-    <link rel="stylesheet" href="css/sections.css">
-    <link rel="stylesheet" href="css/cards.css">
-    <link rel="stylesheet" href="css/forms.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/scroll-to-top.css">
-    <link rel="stylesheet" href="css/responsive-layout.css">
-    <link rel="stylesheet" href="css/responsive-navigation.css">
-    <link rel="stylesheet" href="css/responsive-components.css">
-    <link rel="stylesheet" href="css/responsive-global.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/cookie-banner.css">
-    <link rel="stylesheet" href="css/blog.css">
-    <link rel="stylesheet" href="css/avg-compliance.css">
-    <link rel="stylesheet" href="css/enhanced-readability.css">
+    <link rel="stylesheet" href="css/styles.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -544,5 +523,5 @@
     </button>
 
     <script src="js/main.min.js"></script>
-    <script src="js/cookie-banner.js"></script>
-    <script src="js/scroll-to-top.js"></script>
+    <script src="js/cookie-banner.min.js"></script>
+    <script src="js/scroll-to-top.min.js"></script>
