--- a/cookiebeleid.html
+++ b/cookiebeleid.html
@@ -12,24 +12,11 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bekijk ons cookiebeleid voor informatie over hoe MaasISO cookies gebruikt, welke soorten cookies we plaatsen en hoe u uw cookie-instellingen kunt beheren of aanpassen.">
     <title>Cookiebeleid - MaasISO</title>
     <link rel="canonical" href="https://www.maasiso.nl/cookiebeleid.html">
     <link rel="icon" type="image/svg+xml" href="images/icons/favicon.svg">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/utilities.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/navigation.css">
-    <link rel="stylesheet" href="css/buttons.css">
-    <link rel="stylesheet" href="css/sections.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/scroll-to-top.css">
-    <link rel="stylesheet" href="css/responsive-layout.css">
-    <link rel="stylesheet" href="css/responsive-navigation.css">
-    <link rel="stylesheet" href="css/responsive-components.css">
-    <link rel="stylesheet" href="css/responsive-global.css">
-    <link rel="stylesheet" href="css/legal.css">
+    <link rel="stylesheet" href="css/styles.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
