--- a/iso-27001.html
+++ b/iso-27001.html
@@ -173,26 +173,7 @@
     <link rel="icon" type="image/svg+xml" href="images/icons/favicon.svg">
     
     <!-- CSS Files -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/navigation.css">
-    <link rel="stylesheet" href="css/buttons.css">
-    <link rel="stylesheet" href="css/forms.css">
-    <link rel="stylesheet" href="css/cards.css">
-    <link rel="stylesheet" href="css/hero.css">
-    <link rel="stylesheet" href="css/sections.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/over-ons.css">
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/iso-27001-process.css">
-    <link rel="stylesheet" href="css/utilities.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/responsive-global.css">
-    <link rel="stylesheet" href="css/responsive-navigation.css">
-    <link rel="stylesheet" href="css/responsive-layout.css">
-    <link rel="stylesheet" href="css/responsive-components.css">
+    <link rel="stylesheet" href="css/styles.min.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
