--- a/iso-27001.html
+++ b/iso-27001.html
@@ -567,5 +567,13 @@
             </div>
         </div>
     </footer>
+
+    <!-- Scroll to Top Button -->
+    <button id="scroll-to-top" class="scroll-to-top" aria-label="Scroll naar boven">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
+    <script src="js/main.min.js"></script>
+    <script src="js/scroll-to-top.min.js"></script>
 </body>
 </html>
