--- a/contact.html
+++ b/contact.html
@@ -167,11 +167,6 @@
         </div>
     </footer>
 
-    <!-- Scroll to Top Button -->
-    <button id="scroll-to-top" class="scroll-to-top" aria-label="Scroll naar boven">
-        <i class="fas fa-arrow-up"></i>
-    </button>
-
     <!-- KRITIEKE CONTACT FORMULIER DOCUMENTATIE -->
     <script type="text/plain" id="contact-form-documentation">
     🚨 KRITIEKE DOCUMENTATIE - CONTACT FORMULIER IMPLEMENTATIE 🚨
@@ -247,6 +242,7 @@
         console.log('Initial script test - Before loading contact-form.js');
     </script>
     <script src="js/main.min.js"></script>
+    <script src="js/cookie-banner.min.js"></script>
     <script src="js/scroll-to-top.min.js"></script>
     <script>
         console.log('After loading contact-form.js - Testing if script is loaded');
