--- a/diensten.html
+++ b/diensten.html
@@ -156,6 +156,7 @@
             <div class="container">
                 <h1 class="fade-in">Onze Diensten</h1>
                 <p class="lead fade-in">Ontdek hoe MaasISO u kan helpen met ISO-certificering en compliance</p>
+                <a href="contact.html" class="cta-button fade-in">Vraag een Gratis Consult Aan</a>
             </div>
         </section>
 
@@ -416,5 +417,6 @@
 
     <script src="js/main.min.js"></script>
     <script src="js/cookie-banner.min.js"></script>
+    <script src="js/scroll-to-top.min.js"></script>
 </body>
 </html>
