--- a/over-ons.html
+++ b/over-ons.html
@@ -51,6 +51,7 @@
             <div class="container">
                 <h1 class="fade-in">Over MaasISO</h1>
                 <p class="lead fade-in">Uw betrouwbare partner voor ISO-certificering en compliance sinds 2024. Ontdek hoe onze expertise en toewijding uw organisatie naar een hoger niveau kunnen tillen.</p>
+                <a href="contact.html" class="cta-button fade-in">Vraag een Gratis Consult Aan</a>
             </div>
         </section>
 
@@ -184,7 +185,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="js/scroll-to-top.min.js"></script>
     <script src="js/main.min.js"></script>
+    <script src="js/cookie-banner.min.js"></script>
+    <script src="js/scroll-to-top.min.js"></script>
 </body>
 </html>
