--- a/waarom-maasiso.html
+++ b/waarom-maasiso.html
@@ -286,12 +286,8 @@
         </div>
     </footer>
 
-    <!-- Scroll to Top Button -->
-    <button id="scroll-to-top" class="scroll-to-top" aria-label="Scroll naar boven">
-        <i class="fas fa-arrow-up"></i>
-    </button>
-
     <script src="js/main.min.js"></script>
+    <script src="js/cookie-banner.min.js"></script>
     <script src="js/scroll-to-top.min.js"></script>
 </body>
 </html>
