--- a/contact-success.html
+++ b/contact-success.html
@@ -123,5 +123,7 @@
     </footer>
 
     <script src="js/main.min.js"></script>
+    <script src="js/cookie-banner.min.js"></script>
+    <script src="js/scroll-to-top.min.js"></script>
 </body>
 </html>
