--- a/avg-compliance.html
+++ b/avg-compliance.html
@@ -186,9 +186,9 @@
     <main id="main-content" class="blog-content">
         <section id="hero" class="hero" aria-label="Introductie">
             <div class="container">
-                <h1 class="fade-in">AVG Compliance Check: Versterk Uw Privacy Beleid</h1>
-                <p class="lead fade-in">Zorg voor een effectieve bescherming van persoonsgegevens met een professionele AVG compliance check. Wij helpen u met het waarborgen van uw privacy management.</p>
-                <a href="contact.html" class="cta-button fade-in">Start vandaag met uw compliance check</a>
+                <h1>AVG Compliance Check: Versterk Uw Privacy Beleid</h1>
+                <p class="lead">Zorg voor een effectieve bescherming van persoonsgegevens met een professionele AVG compliance check. Wij helpen u met het waarborgen van uw privacy management.</p>
+                <a href="contact.html" class="cta-button">Start vandaag met uw compliance check</a>
             </div>
         </section>
 
