--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,8 @@
     <main id="main-content">
         <section id="hero" class="hero" aria-label="Introductie">
             <div class="container">
-                <h1 class="fade-in">Contact</h1>
-                <p class="lead fade-in">Heeft u vragen over onze diensten of wilt u meer informatie? Neem gerust contact met ons op.</p>
+                <h1>Contact</h1>
+                <p class="lead">Heeft u vragen over onze diensten of wilt u meer informatie? Neem gerust contact met ons op.</p>
             </div>
         </section>
 
