--- a/diensten.html
+++ b/diensten.html
@@ -154,9 +154,9 @@
     <main id="main-content">
         <section id="hero" class="hero" aria-label="Introductie">
             <div class="container">
-                <h1 class="fade-in">Onze Diensten</h1>
-                <p class="lead fade-in">Ontdek hoe MaasISO u kan helpen met ISO-certificering en compliance</p>
-                <a href="contact.html" class="cta-button fade-in">Vraag een Gratis Consult Aan</a>
+                <h1>Onze Diensten</h1>
+                <p class="lead">Ontdek hoe MaasISO u kan helpen met ISO-certificering en compliance</p>
+                <a href="contact.html" class="cta-button">Vraag een Gratis Consult Aan</a>
             </div>
         </section>
 
