--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     <main id="main-content">
         <section id="hero" class="hero" aria-label="Introductie">
             <div class="container">
-                <h1 class="fade-in">Excellentie door ISO Certificering</h1>
-                <p class="lead fade-in">Versterk uw bedrijf met professionele begeleiding bij onder andere<br>ISO 9001, ISO 27001 en AVG-implementatie</p>
-                <a href="contact.html" class="cta-button fade-in">Vraag een Gratis Consult Aan</a>
+                <h1>Excellentie door ISO Certificering</h1>
+                <p class="lead">Versterk uw bedrijf met professionele begeleiding bij onder andere<br>ISO 9001, ISO 27001 en AVG-implementatie</p>
+                <a href="contact.html" class="cta-button">Vraag een Gratis Consult Aan</a>
             </div>
         </section>
 
