--- a/iso-9001.html
+++ b/iso-9001.html
@@ -186,9 +186,9 @@
     <main id="main-content" class="blog-content">
         <section id="hero" class="hero" aria-label="Introductie">
             <div class="container">
-                <h1 class="fade-in">ISO 9001 Certificering<br>Voor Uw Organisatie</h1>
-                <p class="lead fade-in">Professionele begeleiding bij het behalen van uw ISO 9001 certificering</p>
-                <div class="cta-button-container fade-in">
+                <h1>ISO 9001 Certificering<br>Voor Uw Organisatie</h1>
+                <p class="lead">Professionele begeleiding bij het behalen van uw ISO 9001 certificering</p>
+                <div class="cta-button-container">
                     <a href="contact.html" class="cta-button">Start Uw ISO 9001 Certificeringstraject</a>
                 </div>
             </div>
