--- a/over-ons.html
+++ b/over-ons.html
@@ -49,9 +49,9 @@
     <main id="main-content">
         <section id="hero" class="hero" aria-label="Introductie">
             <div class="container">
-                <h1 class="fade-in">Over MaasISO</h1>
-                <p class="lead fade-in">Uw betrouwbare partner voor ISO-certificering en compliance sinds 2024. Ontdek hoe onze expertise en toewijding uw organisatie naar een hoger niveau kunnen tillen.</p>
-                <a href="contact.html" class="cta-button fade-in">Vraag een Gratis Consult Aan</a>
+                <h1>Over MaasISO</h1>
+                <p class="lead">Uw betrouwbare partner voor ISO-certificering en compliance sinds 2024. Ontdek hoe onze expertise en toewijding uw organisatie naar een hoger niveau kunnen tillen.</p>
+                <a href="contact.html" class="cta-button">Vraag een Gratis Consult Aan</a>
             </div>
         </section>
 
