--- a/waarom-maasiso.html
+++ b/waarom-maasiso.html
@@ -183,9 +183,9 @@
     <main id="main-content">
         <section id="hero" class="hero" aria-label="Introductie">
             <div class="container">
-                <h1 class="fade-in">Onze Voordelen</h1>
-                <p class="lead fade-in">Ontdek waarom wij de ideale partner zijn voor uw ISO-certificering en compliance behoeften</p>
-                <a href="contact.html" class="cta-button fade-in">Vraag een Gratis Consult Aan</a>
+                <h1>Onze Voordelen</h1>
+                <p class="lead">Ontdek waarom wij de ideale partner zijn voor uw ISO-certificering en compliance behoeften</p>
+                <a href="contact.html" class="cta-button">Vraag een Gratis Consult Aan</a>
             </div>
         </section>
 
