--- a/avg-compliance.html
+++ b/avg-compliance.html
@@ -257,7 +257,7 @@
                     <p class="blog-paragraph">Het voldoen aan de Algemene Verordening Gegevensbescherming (AVG) is niet langer optioneel; het is een essentiële pijler voor elke organisatie die persoonsgegevens verwerkt. De impact van niet-naleving reikt verder dan alleen juridische gevolgen. Het kan leiden tot financiële verliezen, beschadigde reputaties en zelfs het verlies van klanten. Tegelijkertijd biedt naleving tal van zakelijke voordelen die uw organisatie sterker en concurrerender maken.</p>
 
                     <h3 class="subsection-title">Juridische Gevolgen van Niet-Naleving</h3>
-                    <p class="blog-paragraph">De AVG kent strenge sancties voor organisaties die de regels overtreden. Deze gevolgen kunnen enorm zijn:</p>
+                    <p class="blog-paragraph">De AVG kent strenge sancties voor organisaties die de regels overtreden. Het risico om een boete te krijgen is reëel en de gevolgen kunnen enorm zijn:</p>
                     <ul class="feature-list">
                         <li class="feature-item"><span>Hoge boetes: Niet-naleving kan leiden tot boetes van maximaal €20 miljoen of 4% van de jaarlijkse wereldwijde omzet, afhankelijk van welke hoger is.</span></li>
                         <li class="feature-item"><span>Sancties en beperkingen: Overheidsinstanties kunnen eisen dat uw organisatie stopt met bepaalde verwerkingsactiviteiten, wat uw bedrijfsvoering ernstig kan verstoren.</span></li>
@@ -441,7 +441,7 @@
                     <p class="blog-paragraph">Het bevorderen van deze cultuur vraagt om duidelijke communicatie, regelmatige training en betrokkenheid vanuit het management. Wanneer privacy een gedeelde verantwoordelijkheid wordt, verkleint u niet alleen risico's, maar versterkt u ook het vertrouwen van klanten en zakenpartners.</p>
 
                     <h2 id="wetgeving" class="section-title">Wet- en Regelgeving rondom AVG</h2>
-                    <p class="blog-paragraph">De Autoriteit Persoonsgegevens controleert actief of alle bedrijven voldoen aan de AVG-wetgeving. Het correct verwerken van persoonsgegevens staat hierbij centraal. Organisaties die de regels niet naleven, riskeren aanzienlijke boetes en sancties.</p>
+                    <p class="blog-paragraph">De Autoriteit Persoonsgegevens controleert actief of alle bedrijven voldoen aan de AVG-wetgeving. Het correct verwerken van persoonsgegevens staat hierbij centraal. Organisaties die de regels niet naleven, kunnen een boete krijgen die kan oplopen tot miljoenen euro's.</p>
 
                     <h3 class="subsection-title">Belangrijke Aspecten van de AVG-wetgeving</h3>
                     <ul class="feature-list">
