--- a/iso-9001.html
+++ b/iso-9001.html
@@ -210,7 +210,10 @@
                     </div>
 
                     <h2 id="intro" class="section-title">Kwaliteit is de Sleutel tot Succes: Waarom ISO 9001 Essentieel is</h2>
-                    <p class="blog-paragraph">Kwaliteit is vandaag de dag geen luxe meer - het is noodzakelijk voor elk bedrijf dat succesvol wil zijn. Een goed werkend kwaliteitssysteem volgens de ISO 9001 norm is de basis voor succes. Maar hoe levert u consistent wat uw klanten verwachten? En nog belangrijker: hoe laat u zien dat u dit kunt? Het antwoord is ISO 9001. Neem contact met ons op om te ontdekken hoe wij u kunnen helpen.</p>
+                    <p class="blog-paragraph">Kwaliteit is vandaag de dag geen luxe meer - het is noodzakelijk voor elk bedrijf dat succesvol wil zijn. Een goed werkend kwaliteitssysteem volgens de ISO 9001 2015 norm is de basis voor succes. Maar hoe levert u consistent wat uw klanten verwachten? En nog belangrijker: hoe laat u zien dat u dit kunt? Het antwoord is ISO 9001. Neem contact met ons op om te ontdekken hoe wij u kunnen helpen.</p>
+
+                    <h3 class="subsection-title">Waarom ISO 9001 certificering?</h3>
+                    <p class="blog-paragraph">Steeds meer organisaties kiezen bewust voor ISO 9001 certificering. De reden is duidelijk: het biedt concrete voordelen voor uw bedrijfsvoering. Van verbeterde klanttevredenheid tot verhoogde efficiency - ISO 9001 helpt u vooruit. Bovendien geeft het certificaat een duidelijk signaal aan uw klanten en partners dat kwaliteit bij u voorop staat.</p>
 
                     <h2 id="principes" class="section-title">Belangrijkste Principes van ISO 9001</h2>
                     <p class="blog-paragraph">ISO 9001 is gebaseerd op zeven belangrijke principes, die als het fundament dienen voor een succesvol kwaliteitsmanagementsysteem:</p>
@@ -304,7 +307,7 @@
                     <p class="blog-paragraph">Het systeem wordt een natuurlijk onderdeel van het dagelijks werk. Geen papieren tijger, maar een praktisch hulpmiddel.</p>
 
                     <h3 class="subsection-title">Stap 4: Interne Audits en Procesevaluaties</h3>
-                    <p class="blog-paragraph">Na de invoering controleren we of alles goed werkt. Dit doen we met interne audits. Hierbij kijken we naar:</p>
+                    <p class="blog-paragraph">Na de invoering controleren we of alles goed werkt. Een ISO 9001 audit is een grondige controle van uw kwaliteitsmanagementsysteem. Dit doen we met interne audits. Hierbij kijken we naar:</p>
                     <ul class="feature-list">
                         <li class="feature-item"><span><strong>Naleving:</strong> Of iedereen de nieuwe werkwijze volgt</span></li>
                         <li class="feature-item"><span><strong>Resultaten:</strong> Of we de gestelde doelen halen</span></li>
