--- a/avg-compliance.html
+++ b/avg-compliance.html
@@ -211,46 +211,89 @@
                     </div>
 
                     <h2 id="impact" class="section-title">De Impact van de AVG op Uw Bedrijf</h2>
-                    <p class="blog-paragraph">De Algemene Verordening Gegevensbescherming (AVG) stelt strenge eisen aan alle bedrijven die persoonsgegevens verwerken. De Autoriteit Persoonsgegevens controleert actief of organisaties voldoen aan deze wet- en regelgeving. Niet-naleving kan leiden tot hoge boetes, reputatieschade en verlies van klantvertrouwen. Een AVG compliance check is dé manier om risico's te identificeren en uw processen voor het verwerken van persoonsgegevens te optimaliseren.</p>
+                    <p class="blog-paragraph">De Algemene Verordening Gegevensbescherming (AVG) legt duidelijke en strenge verplichtingen op aan organisaties die persoonsgegevens verwerken. Deze wetgeving heeft een directe invloed op uw dagelijkse bedrijfsvoering. Denk bijvoorbeeld aan het verwerken van klantgegevens in uw CRM-systeem, het bijhouden van personeelsdossiers, of het versturen van nieuwsbrieven.</p>
 
-                    <h3 class="subsection-title">Een AVG compliance check biedt de volgende voordelen:</h3>
+                    <p class="blog-paragraph">De Autoriteit Persoonsgegevens controleert actief of organisaties voldoen aan deze wet- en regelgeving. Bij een controle kijken ze naar concrete zaken zoals uw verwerkingsregister, beveiligingsmaatregelen en de manier waarop u omgaat met verzoeken van betrokkenen. Niet-naleving kan verstrekkende gevolgen hebben: van hoge boetes tot reputatieschade en verlies van klantvertrouwen.</p>
+
+                    <p class="blog-paragraph">Een AVG compliance check is daarom essentieel. Het helpt u om systematisch risico's te identificeren en uw processen voor het verwerken van persoonsgegevens te optimaliseren. Tijdens zo'n check brengen we in kaart waar verbeteringen nodig zijn en hoe u deze kunt doorvoeren.</p>
+
+                    <h3 class="subsection-title">Een AVG compliance check biedt deze concrete voordelen:</h3>
                     <ul class="feature-list">
-                        <li class="feature-item"><span>Voorkom dat u een boete krijgt van de Autoriteit Persoonsgegevens</span></li>
-                        <li class="feature-item"><span>Bescherm persoonsgegevens effectief volgens de laatste wet- en regelgeving</span></li>
-                        <li class="feature-item"><span>Versterk het vertrouwen van klanten en partners door correcte naleving van de AVG</span></li>
+                        <li class="feature-item"><span>Voorkom boetes: De Autoriteit Persoonsgegevens kan boetes opleggen tot €20 miljoen of 4% van uw jaarlijkse wereldwijde omzet. Een compliance check helpt u deze te voorkomen.</span></li>
+                        <li class="feature-item"><span>Verbeter uw gegevensbescherming: Implementeer effectieve maatregelen volgens de laatste wet- en regelgeving. Bijvoorbeeld door het versleutelen van gevoelige data en het instellen van toegangscontroles.</span></li>
+                        <li class="feature-item"><span>Versterk uw reputatie: Toon aan klanten en partners dat u privacy serieus neemt. Dit versterkt het vertrouwen in uw organisatie en kan zelfs leiden tot een concurrentievoordeel.</span></li>
+                        <li class="feature-item"><span>Optimaliseer uw processen: Door het in kaart brengen van uw gegevensstromen, ontdekt u vaak mogelijkheden om werkprocessen efficiënter in te richten.</span></li>
                     </ul>
 
                     <h2 id="maasiso" class="section-title">Wat Maakt MaasISO Uw Ideale Partner?</h2>
-                    <p class="blog-paragraph">Bij MaasISO combineren we jarenlange ervaring met een praktische aanpak. Met onze AVG compliance check krijgt u inzicht in hoe uw organisatie voldoet aan de AVG én concrete verbeterpunten voor het verwerken van persoonsgegevens. Wij zijn uw partner in het bereiken van volledige naleving van de AVG en helpen u om compliant te blijven met de steeds veranderende wet- en regelgeving.</p>
+                    <p class="blog-paragraph">Bij MaasISO combineren we jarenlange ervaring met een praktische aanpak die direct resultaat oplevert. We hebben al honderden organisaties geholpen met het verbeteren van hun privacy management. Van kleine MKB-bedrijven tot grote ondernemingen - we passen onze aanpak aan op uw specifieke situatie.</p>
+
+                    <h3 class="subsection-title">Onze Expertise in AVG Compliance</h3>
+                    <ul class="feature-list">
+                        <li class="feature-item"><span>Specialistische kennis: Ons team bestaat uit gecertificeerde privacy professionals die continu worden bijgeschoold in de laatste ontwikkelingen rond de AVG.</span></li>
+                        <li class="feature-item"><span>Bewezen track record: We hebben organisaties in diverse sectoren geholpen hun privacy management naar een hoger niveau te tillen, met meetbare resultaten in compliance en efficiency.</span></li>
+                        <li class="feature-item"><span>Praktijkgerichte aanpak: We vertalen complexe AVG-vereisten naar praktische, werkbare oplossingen die passen bij uw bedrijfsprocessen.</span></li>
+                    </ul>
+
+                    <p class="blog-paragraph">Met onze AVG compliance check krijgt u niet alleen inzicht in hoe uw organisatie voldoet aan de AVG, maar ontvangt u ook een concreet stappenplan. Dit plan bevat specifieke verbeterpunten voor het verwerken van persoonsgegevens, toegespitst op uw situatie. We begeleiden u vervolgens bij de implementatie om te zorgen dat de verbeteringen ook daadwerkelijk worden doorgevoerd.</p>
+
+                    <p class="blog-paragraph">Als uw partner in privacy management houden we de vinger aan de pols bij veranderende wet- en regelgeving. We informeren u proactief over relevante wijzigingen en helpen u om compliant te blijven. Zo bent u altijd voorbereid op nieuwe privacy-uitdagingen en kunt u zich focussen op uw kernactiviteiten.</p>
 
                     <h2 id="whatis" class="section-title">Wat is een AVG Compliance Check?</h2>
-                    <p class="blog-paragraph">Een AVG compliance check is een systematische en uitgebreide beoordeling van uw organisatie om te bepalen in hoeverre u voldoet aan de eisen van de Algemene Verordening Gegevensbescherming (AVG). Het proces richt zich op het analyseren van hoe persoonsgegevens worden verzameld, verwerkt, opgeslagen en beveiligd binnen uw organisatie. Het doel is om niet alleen eventuele tekortkomingen aan het licht te brengen, maar ook te zorgen dat uw dataverwerking volledig in lijn is met de wetgeving. Dit voorkomt niet alleen juridische problemen, maar versterkt ook het vertrouwen van uw klanten en partners.</p>
+                    <p class="blog-paragraph">Een AVG compliance check is een grondige doorlichting van uw organisatie om te bepalen hoe goed u voldoet aan de eisen van de Algemene Verordening Gegevensbescherming (AVG). We onderzoeken systematisch hoe uw organisatie omgaat met persoonsgegevens in de dagelijkse praktijk.</p>
 
-                    <h3 class="subsection-title">Definitie en Doel</h3>
-                    <p class="blog-paragraph">Een AVG compliance check is ontworpen om:</p>
+                    <p class="blog-paragraph">Tijdens deze check analyseren we verschillende aspecten van uw gegevensverwerking. Denk bijvoorbeeld aan hoe u klantgegevens verzamelt via uw website, hoe personeelsdossiers worden beheerd, of hoe u omgaat met marketingcommunicatie. We kijken ook naar de beveiliging van deze gegevens en wie er toegang toe heeft.</p>
+
+                    <h3 class="subsection-title">Wat Onderzoeken We Precies?</h3>
                     <ul class="feature-list">
-                        <li class="feature-item"><span>Inzicht te bieden in dataverwerking: Door een overzicht te creëren van welke gegevens worden verwerkt, waarom, en hoe deze worden beveiligd.</span></li>
-                        <li class="feature-item"><span>Risico's te identificeren: Zoals onveilige opslag, ongeautoriseerde toegang of onvolledige procedures.</span></li>
-                        <li class="feature-item"><span>Een actieplan te leveren: Concrete aanbevelingen voor verbeteringen om risico's te mitigeren en naleving te garanderen.</span></li>
+                        <li class="feature-item"><span>Gegevensverzameling: We controleren of u alleen noodzakelijke gegevens verzamelt en of u hiervoor de juiste toestemming heeft.</span></li>
+                        <li class="feature-item"><span>Gegevensopslag: We beoordelen waar en hoe u persoonsgegevens bewaart, bijvoorbeeld in CRM-systemen of cloud-oplossingen.</span></li>
+                        <li class="feature-item"><span>Gegevensbeveiliging: We onderzoeken uw beveiligingsmaatregelen, zoals wachtwoordbeleid en versleuteling van gevoelige data.</span></li>
+                        <li class="feature-item"><span>Gegevensverwerking: We analyseren hoe u persoonsgegevens gebruikt en deelt, bijvoorbeeld met externe partners of dienstverleners.</span></li>
                     </ul>
 
-                    <p class="blog-paragraph">Het primaire doel van een AVG compliance check is dus niet alleen om problemen te signaleren, maar ook om uw organisatie te begeleiden naar volledige naleving. Dit omvat zowel technische als organisatorische maatregelen, van IT-beveiliging tot personeelsbeleid.</p>
+                    <h3 class="subsection-title">Concrete Resultaten</h3>
+                    <p class="blog-paragraph">Na de check ontvangt u:</p>
+                    <ul class="feature-list">
+                        <li class="feature-item"><span>Een helder overzicht van uw huidige privacy-situatie, met concrete voorbeelden van wat goed gaat en wat beter kan.</span></li>
+                        <li class="feature-item"><span>Identificatie van risico's, zoals onbeveiligde systemen of ontbrekende verwerkersovereenkomsten.</span></li>
+                        <li class="feature-item"><span>Een praktisch actieplan met specifieke stappen om uw AVG-naleving te verbeteren.</span></li>
+                        <li class="feature-item"><span>Prioritering van acties, zodat u weet welke verbeteringen het meest urgent zijn.</span></li>
+                    </ul>
+
+                    <p class="blog-paragraph">Het doel is niet alleen om problemen te vinden, maar vooral om u te helpen deze op te lossen. We begeleiden u naar volledige AVG-naleving met praktische oplossingen die passen bij uw organisatie. Dit versterkt niet alleen uw privacy-bescherming, maar ook het vertrouwen van uw klanten en partners.</p>
 
                     <h2 id="benefits" class="section-title">Voordelen van Regelmatige Controles</h2>
-                    <p class="blog-paragraph">Hoewel één enkele AVG compliance check waardevol is, ligt de echte kracht in regelmatige controles. Dit helpt uw organisatie om:</p>
+                    <p class="blog-paragraph">Hoewel één enkele AVG compliance check al waardevol is, ligt de echte kracht in regelmatige controles. Net zoals u regelmatig uw auto laat controleren voor optimale prestaties, verdient ook uw privacy management continue aandacht. Hieronder leggen we uit waarom periodieke controles zo belangrijk zijn en welke concrete voordelen ze bieden.</p>
+
+                    <h3 class="subsection-title">Directe Voordelen voor Uw Organisatie</h3>
                     <ul class="feature-list">
-                        <li class="feature-item"><span>Actueel te blijven met wetgeving: De privacywetgeving evolueert, en regelmatige checks zorgen ervoor dat u altijd aan de nieuwste normen voldoet.</span></li>
-                        <li class="feature-item"><span>Datalekken te voorkomen: Door continu zwakke plekken in uw systemen te identificeren en aan te pakken.</span></li>
-                        <li class="feature-item"><span>Het vertrouwen van klanten te versterken: Door te laten zien dat u privacy serieus neemt, bouwt u een solide reputatie op.</span></li>
-                        <li class="feature-item"><span>Boetes en sancties te vermijden: Door problemen vroegtijdig te signaleren, voorkomt u hoge boetes en sancties. De Autoriteit Persoonsgegevens controleert hier streng op.</span></li>
-                        <li class="feature-item"><span>Procesverbetering te stimuleren: Het optimaliseren van dataverwerking leidt vaak tot efficiëntere en effectievere bedrijfsprocessen.</span></li>
+                        <li class="feature-item"><span>Actueel blijven met wetgeving: De privacywetgeving ontwikkelt zich continu. Bijvoorbeeld: recent zijn de regels voor internationale gegevensoverdracht aangescherpt. Met regelmatige checks zorgen we dat u altijd up-to-date bent.</span></li>
+                        <li class="feature-item"><span>Preventie van datalekken: We identificeren en dichten potentiële beveiligingslekken voordat ze problemen veroorzaken. Denk aan verouderde software, zwakke wachtwoorden of onbeveiligde dataopslag.</span></li>
+                        <li class="feature-item"><span>Efficiëntere processen: Door regelmatige evaluatie ontdekken we vaak mogelijkheden om werkprocessen te stroomlijnen. Bijvoorbeeld door het automatiseren van privacygerelateerde taken of het centraliseren van gegevensbeheer.</span></li>
                     </ul>
 
-                    <p class="blog-paragraph">Regelmatige checks bieden daarmee niet alleen compliance, maar ook een concurrentievoordeel.</p>
+                    <h3 class="subsection-title">Langetermijnvoordelen</h3>
+                    <ul class="feature-list">
+                        <li class="feature-item"><span>Versterkt klantvertrouwen: Door actief en zichtbaar met privacy bezig te zijn, laat u zien dat u de gegevens van uw klanten serieus neemt. Dit vertaalt zich vaak in sterkere klantrelaties en meer loyaliteit.</span></li>
+                        <li class="feature-item"><span>Vermijden van boetes: De Autoriteit Persoonsgegevens voert steeds meer controles uit. Door problemen vroegtijdig te signaleren en aan te pakken, voorkomt u hoge boetes die kunnen oplopen tot miljoenen euro's.</span></li>
+                        <li class="feature-item"><span>Concurrentievoordeel: Steeds meer klanten en partners kijken kritisch naar hoe organisaties omgaan met privacy. Een sterke privacy-aanpak kan doorslaggevend zijn bij het winnen van opdrachten of samenwerkingen.</span></li>
+                    </ul>
+
+                    <h3 class="subsection-title">Praktische Resultaten</h3>
+                    <p class="blog-paragraph">Regelmatige AVG compliance checks leveren concrete resultaten op:</p>
+                    <ul class="feature-list">
+                        <li class="feature-item"><span>Actueel verwerkingsregister: U heeft altijd een up-to-date overzicht van alle gegevensverwerkingen binnen uw organisatie.</span></li>
+                        <li class="feature-item"><span>Verbeterde documentatie: Uw privacyverklaring, verwerkersovereenkomsten en andere documenten blijven actueel en effectief.</span></li>
+                        <li class="feature-item"><span>Getraind personeel: Medewerkers blijven scherp op privacyrisico's en weten hoe ze veilig met gegevens moeten omgaan.</span></li>
+                        <li class="feature-item"><span>Meetbare vooruitgang: Door periodieke evaluatie ziet u concrete verbeteringen in uw privacy management.</span></li>
+                    </ul>
+
+                    <p class="blog-paragraph">Regelmatige checks vormen daarmee de basis voor een sterke privacy-aanpak die verder gaat dan alleen compliance. Het is een investering in de toekomstbestendigheid en professionaliteit van uw organisatie.</p>
 
                     <div class="text-center" style="margin: 3rem 0;">
                         <a href="contact.html" class="cta-button fade-in" style="font-size: 1.2rem; padding: 1.2rem 2.5rem;">START UW AVG COMPLIANCE CHECK</a>
-                        <p style="margin-top: 1rem; color: var(--text-color-dark); font-size: 1.1rem;">Voorkom boetes en bescherm uw bedrijf</p>
+                        <p style="margin-top: 1rem; color: var(--text-color-dark); font-size: 1.1rem;">Begin vandaag nog met het verbeteren van uw privacy management</p>
                     </div>
 
                     <h2 id="crucial" class="section-title">Waarom is AVG Compliance Cruciaal voor Uw Organisatie?</h2>
