--- a/index.html
+++ b/index.html
@@ -116,6 +116,29 @@
             </div>
         </section>
 
+        <section id="informatiebeveiliging" class="section-padding" aria-label="Informatiebeveiliging en Privacy">
+            <div class="container">
+                <h2 class="section-title fade-in">Informatiebeveiliging en Privacy</h2>
+                <div class="diensten-grid">
+                    <div class="dienst fade-in">
+                        <i class="fas fa-shield-alt dienst-icon" aria-hidden="true"></i>
+                        <h3>Bescherm Uw Bedrijfsgegevens</h3>
+                        <p>Met onze expertise in informatiebeveiliging helpen we u bij het implementeren van effectieve beveiligingsmaatregelen om uw bedrijfskritische informatie te beschermen.</p>
+                    </div>
+                    <div class="dienst fade-in">
+                        <i class="fas fa-user-shield dienst-icon" aria-hidden="true"></i>
+                        <h3>Privacy by Design</h3>
+                        <p>We integreren privacybescherming vanaf de basis in uw bedrijfsprocessen, zodat u voldoet aan alle relevante wet- en regelgeving.</p>
+                    </div>
+                    <div class="dienst fade-in">
+                        <i class="fas fa-lock dienst-icon" aria-hidden="true"></i>
+                        <h3>Continue Bescherming</h3>
+                        <p>Onze aanpak zorgt voor een doorlopende bewaking en verbetering van uw beveiligings- en privacymaatregelen.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="waarom-maasiso" class="section-padding" aria-label="Waarom kiezen voor MaasISO">
             <div class="container">
                 <h2 class="section-title fade-in">Waarom Kiezen voor MaasISO</h2>
